crates/php-parser/tests/snapshots/integration__attribute_with_new_expression_arg.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php #[Attr(new Config(debug: false))] function f() {}
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "f",
          "params": [],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": [
            {
              "name": {
                "parts": [
                  "Attr"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 8,
                  "end": 12
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "New": {
                        "class": {
                          "kind": {
                            "Identifier": "Config"
                          },
                          "span": {
                            "start": 17,
                            "end": 23
                          }
                        },
                        "args": [
                          {
                            "name": "debug",
                            "value": {
                              "kind": {
                                "Bool": false
                              },
                              "span": {
                                "start": 31,
                                "end": 36
                              }
                            },
                            "unpack": false,
                            "by_ref": false,
                            "span": {
                              "start": 24,
                              "end": 36
                            }
                          }
                        ]
                      }
                    },
                    "span": {
                      "start": 13,
                      "end": 37
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 13,
                    "end": 37
                  }
                }
              ],
              "span": {
                "start": 8,
                "end": 38
              }
            }
          ]
        }
      },
      "span": {
        "start": 40,
        "end": 55
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 55
  }
}
