crates/php-parser/tests/snapshots/integration__attributes.snap
---
source: crates/php-parser/tests/integration.rs
expression: result.program
---
stmts:
  - kind:
      Function:
        name: add
        params:
          - name: a
            type_hint:
              kind:
                Named:
                  parts:
                    - int
                  kind: Unqualified
                  span:
                    start: 60
                    end: 63
              span:
                start: 60
                end: 63
            default: ~
            by_ref: false
            variadic: false
            visibility: ~
            attributes: []
            span:
              start: 60
              end: 66
          - name: b
            type_hint:
              kind:
                Named:
                  parts:
                    - int
                  kind: Unqualified
                  span:
                    start: 68
                    end: 71
              span:
                start: 68
                end: 71
            default: ~
            by_ref: false
            variadic: false
            visibility: ~
            attributes: []
            span:
              start: 68
              end: 74
        body:
          - kind:
              Return:
                kind:
                  Binary:
                    left:
                      kind:
                        Variable: a
                      span:
                        start: 94
                        end: 96
                    op: Add
                    right:
                      kind:
                        Variable: b
                      span:
                        start: 99
                        end: 101
                span:
                  start: 94
                  end: 101
            span:
              start: 87
              end: 103
        return_type:
          kind:
            Named:
              parts:
                - int
              kind: Unqualified
              span:
                start: 77
                end: 80
          span:
            start: 77
            end: 80
        by_ref: false
        attributes:
          - name:
              parts:
                - Pure
              kind: Unqualified
              span:
                start: 41
                end: 45
            args: []
            span:
              start: 41
              end: 45
    span:
      start: 47
      end: 104
  - kind:
      Function:
        name: listUsers
        params: []
        body: []
        return_type: ~
        by_ref: false
        attributes:
          - name:
              parts:
                - Route
              kind: Unqualified
              span:
                start: 136
                end: 141
            args:
              - name: ~
                value:
                  kind:
                    String: /api/users
                  span:
                    start: 142
                    end: 154
                unpack: false
                span:
                  start: 142
                  end: 154
              - name: methods
                value:
                  kind:
                    Array:
                      - key: ~
                        value:
                          kind:
                            String: GET
                          span:
                            start: 166
                            end: 171
                        unpack: false
                        span:
                          start: 166
                          end: 171
                      - key: ~
                        value:
                          kind:
                            String: POST
                          span:
                            start: 173
                            end: 179
                        unpack: false
                        span:
                          start: 173
                          end: 179
                  span:
                    start: 165
                    end: 180
                unpack: false
                span:
                  start: 156
                  end: 180
            span:
              start: 136
              end: 181
    span:
      start: 183
      end: 206
  - kind:
      Class:
        name: Foo
        modifiers:
          is_abstract: false
          is_final: false
          is_readonly: false
        extends: ~
        implements: []
        members: []
        attributes:
          - name:
              parts:
                - A
              kind: Unqualified
              span:
                start: 241
                end: 242
            args: []
            span:
              start: 241
              end: 242
          - name:
              parts:
                - B
              kind: Unqualified
              span:
                start: 244
                end: 245
            args: []
            span:
              start: 244
              end: 245
    span:
      start: 247
      end: 259
  - kind:
      Class:
        name: Bar
        modifiers:
          is_abstract: false
          is_final: false
          is_readonly: false
        extends: ~
        implements: []
        members: []
        attributes:
          - name:
              parts:
                - Attribute1
              kind: Unqualified
              span:
                start: 285
                end: 295
            args: []
            span:
              start: 285
              end: 295
          - name:
              parts:
                - Attribute2
              kind: Unqualified
              span:
                start: 299
                end: 309
            args: []
            span:
              start: 299
              end: 309
    span:
      start: 311
      end: 323
  - kind:
      Class:
        name: User
        modifiers:
          is_abstract: false
          is_final: false
          is_readonly: false
        extends: ~
        implements: []
        members:
          - kind:
              Property:
                name: name
                visibility: Public
                is_static: false
                is_readonly: false
                type_hint:
                  kind:
                    Named:
                      parts:
                        - string
                      kind: Unqualified
                      span:
                        start: 402
                        end: 408
                  span:
                    start: 402
                    end: 408
                default: ~
                attributes:
                  - name:
                      parts:
                        - Column
                      kind: Unqualified
                      span:
                        start: 375
                        end: 381
                    args:
                      - name: ~
                        value:
                          kind:
                            String: name
                          span:
                            start: 382
                            end: 388
                        unpack: false
                        span:
                          start: 382
                          end: 388
                    span:
                      start: 375
                      end: 389
            span:
              start: 373
              end: 421
          - kind:
              Property:
                name: id
                visibility: Private
                is_static: false
                is_readonly: false
                type_hint:
                  kind:
                    Named:
                      parts:
                        - int
                      kind: Unqualified
                      span:
                        start: 461
                        end: 464
                  span:
                    start: 461
                    end: 464
                default: ~
                attributes:
                  - name:
                      parts:
                        - Id
                      kind: Unqualified
                      span:
                        start: 423
                        end: 425
                    args: []
                    span:
                      start: 423
                      end: 425
                  - name:
                      parts:
                        - GeneratedValue
                      kind: Unqualified
                      span:
                        start: 433
                        end: 447
                    args: []
                    span:
                      start: 433
                      end: 447
            span:
              start: 421
              end: 475
          - kind:
              Method:
                name: name
                visibility: Public
                is_static: false
                is_abstract: false
                is_final: false
                by_ref: false
                params: []
                return_type:
                  kind:
                    Named:
                      parts:
                        - string
                      kind: Unqualified
                      span:
                        start: 542
                        end: 548
                  span:
                    start: 542
                    end: 548
                body:
                  - kind:
                      Return:
                        kind:
                          PropertyAccess:
                            object:
                              kind:
                                Variable: this
                              span:
                                start: 566
                                end: 571
                            property:
                              kind:
                                Identifier: name
                              span:
                                start: 573
                                end: 577
                        span:
                          start: 566
                          end: 577
                    span:
                      start: 559
                      end: 583
                attributes:
                  - name:
                      parts:
                        - Deprecated
                      kind: Unqualified
                      span:
                        start: 477
                        end: 487
                    args:
                      - name: ~
                        value:
                          kind:
                            String: Use getName() instead
                          span:
                            start: 488
                            end: 511
                        unpack: false
                        span:
                          start: 488
                          end: 511
                    span:
                      start: 477
                      end: 512
            span:
              start: 475
              end: 585
        attributes: []
    span:
      start: 356
      end: 586
  - kind:
      Function:
        name: greet
        params:
          - name: name
            type_hint:
              kind:
                Named:
                  parts:
                    - string
                  kind: Unqualified
                  span:
                    start: 642
                    end: 648
              span:
                start: 642
                end: 648
            default: ~
            by_ref: false
            variadic: false
            visibility: ~
            attributes:
              - name:
                  parts:
                    - FromQuery
                  kind: Unqualified
                  span:
                    start: 631
                    end: 640
                args: []
                span:
                  start: 631
                  end: 640
            span:
              start: 629
              end: 654
        body: []
        return_type: ~
        by_ref: false
        attributes: []
    span:
      start: 614
      end: 658
  - kind:
      Expression:
        kind:
          Assign:
            target:
              kind:
                Variable: x
              span:
                start: 708
                end: 710
            op: Assign
            value:
              kind:
                Int: 1
              span:
                start: 713
                end: 714
        span:
          start: 708
          end: 714
    span:
      start: 708
      end: 738
  - kind:
      Enum:
        name: Color
        scalar_type: ~
        implements: []
        members:
          - kind:
              Case:
                name: Red
                value: ~
                attributes:
                  - name:
                      parts:
                        - CaseAttr
                      kind: Unqualified
                      span:
                        start: 769
                        end: 777
                    args: []
                    span:
                      start: 769
                      end: 777
            span:
              start: 783
              end: 797
          - kind:
              Case:
                name: Blue
                value: ~
                attributes: []
            span:
              start: 797
              end: 808
        attributes:
          - name:
              parts:
                - EnumAttr
              kind: Unqualified
              span:
                start: 740
                end: 748
            args: []
            span:
              start: 740
              end: 748
    span:
      start: 750
      end: 809
span:
  start: 0
  end: 809
