crates/php-parser/tests/snapshots/integration__break_continue_depth.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
while (true) {
    while (true) {
        break 2;
        continue 2;
    }
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "While": {
          "condition": {
            "kind": {
              "Bool": true
            },
            "span": {
              "start": 13,
              "end": 17
            }
          },
          "body": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "While": {
                      "condition": {
                        "kind": {
                          "Bool": true
                        },
                        "span": {
                          "start": 32,
                          "end": 36
                        }
                      },
                      "body": {
                        "kind": {
                          "Block": [
                            {
                              "kind": {
                                "Break": {
                                  "kind": {
                                    "Int": 2
                                  },
                                  "span": {
                                    "start": 54,
                                    "end": 55
                                  }
                                }
                              },
                              "span": {
                                "start": 48,
                                "end": 65
                              }
                            },
                            {
                              "kind": {
                                "Continue": {
                                  "kind": {
                                    "Int": 2
                                  },
                                  "span": {
                                    "start": 74,
                                    "end": 75
                                  }
                                }
                              },
                              "span": {
                                "start": 65,
                                "end": 81
                              }
                            }
                          ]
                        },
                        "span": {
                          "start": 38,
                          "end": 82
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 25,
                    "end": 82
                  }
                }
              ]
            },
            "span": {
              "start": 19,
              "end": 84
            }
          }
        }
      },
      "span": {
        "start": 6,
        "end": 84
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 84
  }
}
